tests/errors/type_check/declaration/validate_undeclared_local_type.err.expected
error: at 1:10: [TC-InvalidDeclaredType] In function 'f', local 'x': Use of undeclared type 'Nope'
   |
 1 | fn f() { x: Nope; entry: return }
   |          ^^^^^^^^
